force-app/main/default/objects/Contract_Unit__c/fields/Build_Number__c.field-meta.xml
<CustomField>
    <fullName>Build_Number__c</fullName>
    <description>To register the Build Number</description>
    <externalId>true</externalId>
    <inlineHelpText>To register the Build Number</inlineHelpText>
    <label>Build Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>