force-app/main/default/objects/Contract_Unit__c/fields/Denotation__c.field-meta.xml
<CustomField>
    <fullName>Denotation__c</fullName>
    <description>Extra field to store additional data (e.g. a parking spot) on the contract unit</description>
    <inlineHelpText>Leg hier eventuele extra informatie van de Contract eenheid vast</inlineHelpText>
    <label>Denotation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>