force-app/main/default/objects/Contract_Unit__c/fields/For_sale__c.field-meta.xml
<CustomField>
    <fullName>For_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To register if the Contract Unit is for sale</description>
    <inlineHelpText>To register if the Contract Unit is for sale</inlineHelpText>
    <label>For sale</label>
    <type>Checkbox</type>
</CustomField>