force-app/main/default/objects/Contract_Unit__c/fields/Future_usage__c.field-meta.xml
<CustomField>
    <fullName>Future_usage__c</fullName>
    <description>To register the future usage</description>
    <inlineHelpText>To register the future usage</inlineHelpText>
    <label>Future usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HUU</fullName>
                <label>Rental</label>
            </value>
            <value>
                <fullName>KOO</fullName>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>SLO</fullName>
                <label>Demolition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>