force-app/main/default/objects/Contract_Unit__c/fields/Independent__c.field-meta.xml
<CustomField>
    <fullName>Independent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To register if the Contract Unit is independent</description>
    <inlineHelpText>To register if the Contract Unit is independent</inlineHelpText>
    <label>Independent</label>
    <type>Checkbox</type>
</CustomField>