force-app/main/default/objects/Contract_Unit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>To register location details</description>
    <inlineHelpText>To register location details</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBK</fullName>
                <label>Outside urban area</label>
            </value>
            <value>
                <fullName>BES</fullName>
                <label>Sheltered location</label>
            </value>
            <value>
                <fullName>BOS</fullName>
                <label>In wooded area</label>
            </value>
            <value>
                <fullName>BRA</fullName>
                <label>At the edge of forest</label>
            </value>
            <value>
                <fullName>CEN</fullName>
                <label>In town center</label>
            </value>
            <value>
                <fullName>DRU</fullName>
                <label>On busy road</label>
            </value>
            <value>
                <fullName>LAN</fullName>
                <label>Rural location</label>
            </value>
            <value>
                <fullName>OPE</fullName>
                <label>Open location</label>
            </value>
            <value>
                <fullName>PAR</fullName>
                <label>Near park</label>
            </value>
            <value>
                <fullName>RUS</fullName>
                <label>On quiet road</label>
            </value>
            <value>
                <fullName>VAA</fullName>
                <label>Near waterways</label>
            </value>
            <value>
                <fullName>VRI</fullName>
                <label>Open view</label>
            </value>
            <value>
                <fullName>WAT</fullName>
                <label>Near water</label>
            </value>
            <value>
                <fullName>WOO</fullName>
                <label>In residential area</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>