force-app/main/default/objects/Contract_Unit__c/fields/Premise_ID__c.field-meta.xml
<CustomField>
    <fullName>Premise_ID__c</fullName>
    <description>To register the Premise</description>
    <externalId>true</externalId>
    <inlineHelpText>To register the Premise</inlineHelpText>
    <label>Premise ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>