force-app/main/default/objects/Contract_Unit__c/fields/Social_label__c.field-meta.xml
<CustomField>
    <fullName>Social_label__c</fullName>
    <description>To register the social label</description>
    <inlineHelpText>To register the social label</inlineHelpText>
    <label>Social label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAE</fullName>
                <label>DAEB</label>
            </value>
            <value>
                <fullName>GNDV</fullName>
                <label>Consolidated NON-DAEB connection</label>
            </value>
            <value>
                <fullName>NDA</fullName>
                <label>Non-DAEB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>