force-app/main/default/objects/Contract_Unit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To register the status of the Contract Unit</description>
    <inlineHelpText>Leg hier de status van de Contract eenheid vast</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
                <label>Administrative</label>
            </value>
            <value>
                <fullName>LEE</fullName>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>ONT</fullName>
                <label>Under development</label>
            </value>
            <value>
                <fullName>UIT</fullName>
                <label>Out of exploitation</label>
            </value>
            <value>
                <fullName>VEH</fullName>
                <label>Rented</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>