force-app/main/default/objects/Contract_Unit__c/fields/Target_group__c.field-meta.xml
<CustomField>
    <fullName>Target_group__c</fullName>
    <description>To register the target group</description>
    <inlineHelpText>To register the target group</inlineHelpText>
    <label>Target group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EEN</fullName>
                <label>Person</label>
            </value>
            <value>
                <fullName>GEZ</fullName>
                <label>Family</label>
            </value>
            <value>
                <fullName>HZO</fullName>
                <label>Childless household</label>
            </value>
            <value>
                <fullName>JON</fullName>
                <label>Youth</label>
            </value>
            <value>
                <fullName>SEN</fullName>
                <label>Senior</label>
            </value>
            <value>
                <fullName>STA</fullName>
                <label>Starter</label>
            </value>
            <value>
                <fullName>STU</fullName>
                <label>Students</label>
            </value>
            <value>
                <fullName>ZOR</fullName>
                <label>Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>