force-app/main/default/objects/Contract_Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>To identify the Unit Type of the Contract Unit</description>
    <inlineHelpText>Het Eenheid type van de Contract eenheid</inlineHelpText>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
                <default>true</default>
                <label>Rental</label>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>VVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>